# Younger-Apps-DL-Generation

./: README.md  pyproject.toml
tests/: generate_options_anno.py
younger_apps_dl/: __init__.py
younger_apps_dl/commands/: __init__.py  apps.py  main.py  standard.py
younger_apps_dl/commons/: __init__.py  checkpoint.py  constants.py  help.py  logging.py  mixins.py  utils.py
younger_apps_dl/commons/mixins/: __init__.py  options.py
younger_apps_dl/components/: __init__.py
younger_apps_dl/components/datasets/: __init__.py  block_dataset.py  edge.py  node.py
younger_apps_dl/components/models/: __init__.py
younger_apps_dl/components/models/edge_prediction/: __init__.py  gat.py  vgae.py
younger_apps_dl/components/models/embedding/: __init__.py  glass.py  mae.py  maegin.py
younger_apps_dl/components/models/node_prediction/: ae.py  gat.py  sage.py
younger_apps_dl/components/models/performance_prediction/: napp_gat_base.py  napp_gat_vary_v1.py  napp_gin_base.py
younger_apps_dl/datasets/: __init__.py
younger_apps_dl/datasets/graph/: __init__.py  dag.py  graph.py  graph_to_nodes.py  graph_with_metrics.py
younger_apps_dl/engines/: __init__.py
younger_apps_dl/engines/evaluators/: __init__.py  standard.py
younger_apps_dl/engines/postprocessors/: __init__.py
younger_apps_dl/engines/predictors/: __init__.py  single.py  standard.py
younger_apps_dl/engines/preprocessors/: __init__.py  dag_split.py  graph_split.py  subgraph_extraction.py
younger_apps_dl/engines/trainers/: __init__.py  distributed.py  standard.py
younger_apps_dl/frameworks/: __init__.py  standard.py
younger_apps_dl/models/: __init__.py
younger_apps_dl/models/edge_prediction/: gcn.py  sage.py
younger_apps_dl/models/embedding/: __init__.py  maegin.py
younger_apps_dl/models/node_prediction/: __init__.py  gcn.py  gin.py
younger_apps_dl/models/performance_prediction/: __init__.py
younger_apps_dl/postprocessors/: __init__.py
younger_apps_dl/preprocessors/: __init__.py
younger_apps_dl/scripts/: community_split.py
younger_apps_dl/tasks/: __init__.py  base.py  base_task.py  ssl_prediction.py
younger_apps_dl/tasks/core/: __init__.py
younger_apps_dl/tasks/ir/: __init__.py  base.py  nsg_basic_np.py  subgraph_embedding.py
younger_apps_dl/tasks/ir/classification/: __init__.py  edge_prediction.py  ssl_node_prediction.py
younger_apps_dl/tasks/ir/embedding/: .py  __init__.py  basic_embedding.py  graph_embedding.py  subgraph_embedding.py
younger_apps_dl/tasks/ir/generation/: __init__.py  nsg_dataflow.py  nsg_operator.py
younger_apps_dl/tasks/ir/regression/: __init__.py  performance_prediction.py
younger_apps_dl/tasks/standard/: __init__.py  base.py  standard_base_task.py
younger_apps_dl/tasks/standard/dag/: __init__.py  ssl_node_prediction.py
younger_apps_dl/trainers/: __init__.py  standard.py
younger_apps_dl/utils/: neural_network.py
