[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["younger_apps_dl*"]
exclude = ["tests*", "third_parties*"]

[project]
name = "Younger-Apps-DL"
description = "Deep Learning Application Module of the Younger Project."
version = "0.0.1alpha1"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache Software License"}
keywords = ["Younger", "Application", "Deep Learning", "Artificial Intelligence"]
authors = [{name = "Jason-Young-AI", email = "AI.Jason.Young@outlook.com"}]
maintainers = [{name = "Jason-Young-AI", email = "AI.Jason.Young@outlook.com"}]
classifiers=[
    "Development Status :: 3 - Alpha",

    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',

    'License :: OSI Approved :: Apache Software License',

    'Operating System :: OS Independent',

    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "tqdm",
    "torch",
    "click",
    "younger",
    "tabulate",
    "networkx",
    "scikit-learn",
    "torch-geometric",
    "python-semantic-release",
]

[project.optional-dependencies]
developer = [
    "sphinx"
]

[project.urls]
Homepage = "https://younger.yangs.ai/apps/dl"
Issues = "https://github.com/Yangs-AI/Younger-Apps-DL/issues"
Source = "https://github.com/Yangs-AI/Younger-Apps-DL"
Repository = "https://github.com/Yangs-AI/Younger-Apps-DL.git"

[project.scripts]
younger-apps-dl = "younger_apps_dl.commands.main:main"

[project.entry-points."younger.apps"]
dl = "younger_apps_dl.commands.main:main"
